// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create 1`] = `
Object {
  "amount": 0,
  "date": null,
  "destination": "Food",
  "source": "Cash",
}
`;

exports[`TransactionForm renders without error 1`] = `
<form
  onSubmit={[Function]}
>
  <Component
    onChange={[Function]}
    value="expense"
  />
  <Component
    label="From"
    onChange={[Function]}
    required={true}
    value="Cash"
  />
  <Component
    label="To"
    onChange={[Function]}
    required={true}
    value="Food"
  />
  <Component
    label="Amount"
    onChange={[Function]}
    required={true}
    value={10}
  />
  <Component
    label="When"
    onChange={[Function]}
    value="2018-01-01T00:00:00.000Z"
  />
  <Button
    onClick={[Function]}
    type="button"
  >
    Cancel
  </Button>
  <Button
    id="delete"
    onClick={[Function]}
    type="button"
  >
    Delete
  </Button>
  <Button
    disabled={false}
    type="submit"
  >
    Save
  </Button>
</form>
`;

exports[`Update 1`] = `
Array [
  "1",
  Object {
    "amount": 10,
    "date": "2018-01-01T00:00:00.000Z",
    "destination": "Food",
    "source": "Cash",
  },
]
`;

exports[`disabled 1`] = `
<Button
  disabled={true}
  type="submit"
>
  Save
</Button>
`;

exports[`enabled 1`] = `
<Button
  disabled={false}
  type="submit"
>
  Save
</Button>
`;

exports[`should be disabled 1`] = `
Array [
  <Button
    onClick={[Function]}
    type="button"
>
    <button
        onClick={[Function]}
        type="button"
    >
        Cancel
    </button>
</Button>,
  <Button
    disabled={true}
    type="submit"
>
    <button
        disabled={true}
        type="submit"
    >
        Save
    </button>
</Button>,
]
`;

exports[`should be enabled 1`] = `
Array [
  <Button
    onClick={[Function]}
    type="button"
>
    <button
        onClick={[Function]}
        type="button"
    >
        Cancel
    </button>
</Button>,
  <Button
    disabled={true}
    type="submit"
>
    <button
        disabled={true}
        type="submit"
    >
        Save
    </button>
</Button>,
]
`;
